--- a/files/index/styles.css
+++ b/files/index/styles.css
@@ -113,7 +113,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -123,7 +123,7 @@
   top:138px;
   width:375px;
   height:60px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -584,7 +584,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -594,7 +594,7 @@
   top:137px;
   width:375px;
   height:60px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -1670,7 +1670,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -1680,7 +1680,7 @@
   top:137px;
   width:375px;
   height:60px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -2641,7 +2641,7 @@
   top:217px;
   width:150px;
   height:150px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:18px;
@@ -2862,7 +2862,7 @@
   top:217px;
   width:150px;
   height:150px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:18px;
@@ -3009,7 +3009,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -3019,7 +3019,7 @@
   top:137px;
   width:375px;
   height:60px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
 }
@@ -5844,7 +5844,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:28px;
@@ -5855,7 +5855,7 @@
   top:239px;
   width:121px;
   height:38px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:28px;
@@ -5999,7 +5999,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -6011,7 +6011,7 @@
   top:165px;
   width:154px;
   height:27px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -6406,7 +6406,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -6418,7 +6418,7 @@
   top:315px;
   width:154px;
   height:27px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -6813,7 +6813,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -6825,7 +6825,7 @@
   top:15px;
   width:154px;
   height:27px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -7130,7 +7130,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -7142,7 +7142,7 @@
   top:457px;
   width:154px;
   height:27px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -7447,7 +7447,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
@@ -7459,7 +7459,7 @@
   top:608px;
   width:154px;
   height:27px;
-  font-family:'华文细黑 Bold', '华文细黑';
+  font-family:'华文细黑 Bold', '华文细黑 Regular', '华文细黑';
   font-weight:700;
   font-style:normal;
   font-size:20px;
